--- a/ResistorRatio/ResistorTool.csproj
+++ b/ResistorRatio/ResistorTool.csproj
@@ -50,8 +50,8 @@
     <ApplicationIcon>Industry-Resistor-icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EsseivaN_Library">
-      <HintPath>..\..\..\..\EsseivaN\libs\EsseivaN_Library.dll</HintPath>
+    <Reference Include="EsseivaN_Lib">
+      <HintPath>..\..\..\..\EsseivaN\libs\EsseivaN_Lib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
