--- a/ResistorRatio/ResistorTool.csproj
+++ b/ResistorRatio/ResistorTool.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
     <Compile Include="WindowParallelReverse.cs">
       <SubType>Form</SubType>
     </Compile>
