--- a/ResistorRatio/ResistorTool.csproj
+++ b/ResistorRatio/ResistorTool.csproj
@@ -93,11 +93,20 @@
     <Compile Include="WindowRatio.Designer.cs">
       <DependentUpon>WindowRatio.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmMain.fr.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmPreview.fr.resx">
+      <DependentUpon>frmPreview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPreview.resx">
       <DependentUpon>frmPreview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WindowParallelReverse.fr.resx">
+      <DependentUpon>WindowParallelReverse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WindowParallelReverse.resx">
       <DependentUpon>WindowParallelReverse.cs</DependentUpon>
